Project proper_thing_classroom {
  database_type: 'PostgreSQL'

  Note: '''
    Derived from front/sql/classroom_schema.sql.
    Columns named environment_id in help_requests, assignment_environments,
    and assignment_feedback_comments are stored as external environment
    identifiers in SQL and are not enforced as foreign keys.
  '''
}

Enum user_role {
  teacher
  student
}

Enum help_request_status {
  open
  resolved
}

Enum submission_status {
  not_started
  in_progress
  submitted
  needs_changes
}

TableGroup auth {
  users
  session
  user_profiles
}

TableGroup workspace {
  environments
}

TableGroup classroom {
  classes
  class_enrollments
  assignments
  help_requests
  assignment_environments
  assignment_feedback_comments
}

Table users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  username varchar(64) [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table session {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: 'idx_session_user_id']
  }
}

Table environments {
  id uuid [pk, not null]
  user_id uuid [not null]
  name varchar(80) [not null]
  description varchar(500)
  runtime varchar(64) [not null, default: 'python-3.11']
  status varchar(32) [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  last_opened_at timestamptz

  indexes {
    user_id [name: 'idx_environments_user_id']
    updated_at [name: 'idx_environments_updated_at', note: 'Indexed as updated_at DESC in SQL']
  }
}

Table user_profiles {
  user_id uuid [pk, not null]
  role user_role [not null, default: 'student']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table classes {
  id text [pk, not null]
  teacher_id uuid [not null]
  name varchar(120) [not null]
  description varchar(800)
  join_code varchar(12) [not null, unique]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    teacher_id [name: 'idx_classes_teacher_id']
  }
}

Table class_enrollments {
  class_id text [not null]
  student_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (class_id, student_id) [pk]
    student_id [name: 'idx_class_enrollments_student_id']
  }
}

Table assignments {
  id text [pk, not null]
  class_id text [not null]
  teacher_id uuid [not null]
  title varchar(160) [not null]
  description varchar(2000)
  due_at timestamptz
  template_environment_id uuid
  test_cases_json jsonb [not null, default: `'[]'::jsonb`]
  checklist_json jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    class_id [name: 'idx_assignments_class_id']
    teacher_id [name: 'idx_assignments_teacher_id']
    template_environment_id [name: 'idx_assignments_template_environment_id']
  }
}

Table help_requests {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  class_id text [not null]
  assignment_id text
  student_id uuid [not null]
  environment_id text [not null]
  message varchar(1000)
  status help_request_status [not null, default: 'open']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  resolved_at timestamptz

  Note: '''
    SQL also defines a partial unique index named
    idx_help_requests_open_student_environment on
    (student_id, environment_id) where status = 'open'.
  '''

  indexes {
    (class_id, status, created_at) [name: 'idx_help_requests_class_status_created']
    (student_id, status) [name: 'idx_help_requests_student_status']
  }
}

Table assignment_environments {
  id text [pk, not null]
  assignment_id text [not null]
  student_id uuid [not null]
  environment_id text [not null, unique]
  submission_status submission_status [not null, default: 'not_started']
  submission_updated_at timestamptz
  submitted_at timestamptz
  reviewed_at timestamptz
  latest_test_run_json jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (assignment_id, student_id) [unique]
    assignment_id [name: 'idx_assignment_environments_assignment_id']
    student_id [name: 'idx_assignment_environments_student_id']
    submission_status [name: 'idx_assignment_environments_submission_status']
  }
}

Table assignment_feedback_comments {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  assignment_environment_id text [not null]
  assignment_id text [not null]
  environment_id text [not null]
  teacher_id uuid [not null]
  file_name varchar(160) [not null]
  line_number integer [not null, check: `line_number >= 1`]
  content varchar(2000) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (environment_id, created_at) [name: 'idx_assignment_feedback_comments_environment_created']
    (assignment_environment_id, created_at) [name: 'idx_assignment_feedback_comments_assignment_environment']
  }
}

Ref: session.user_id > users.id [delete: cascade]
Ref: environments.user_id > users.id [delete: cascade]
Ref: user_profiles.user_id - users.id [delete: cascade]
Ref: classes.teacher_id > users.id [delete: cascade]
Ref: class_enrollments.class_id > classes.id [delete: cascade]
Ref: class_enrollments.student_id > users.id [delete: cascade]
Ref: assignments.class_id > classes.id [delete: cascade]
Ref: assignments.teacher_id > users.id [delete: cascade]
Ref: assignments.template_environment_id > environments.id [delete: set null]
Ref: help_requests.class_id > classes.id [delete: cascade]
Ref: help_requests.assignment_id > assignments.id [delete: set null]
Ref: help_requests.student_id > users.id [delete: cascade]
Ref: assignment_environments.assignment_id > assignments.id [delete: cascade]
Ref: assignment_environments.student_id > users.id [delete: cascade]
Ref: assignment_feedback_comments.assignment_environment_id > assignment_environments.id [delete: cascade]
Ref: assignment_feedback_comments.assignment_id > assignments.id [delete: cascade]
Ref: assignment_feedback_comments.teacher_id > users.id [delete: cascade]
